--- a/style.css
+++ b/style.css
@@ -231,6 +231,8 @@ input[type=email]:focus {
     --webkit-appearance: none;
     --webkit-padding-before: 1.8rem;
     --webkit-padding-after: 1.8rem;
+    --webkit-padding-start: 1.8rem;
+    --webkit-padding-end: 1.8rem;
   }
   .logos {
     margin-bottom: 5rem;
