--- a/style.css
+++ b/style.css
@@ -228,11 +228,8 @@ input[type=email]:focus {
   }
   input[type=submit] {
     margin-left: 0;
-    --webkit-appearance: none;
-    --webkit-padding-before: 1.8rem;
-    --webkit-padding-after: 1.8rem;
-    --webkit-padding-start: 1.8rem;
-    --webkit-padding-end: 1.8rem;
+    -webkit-appearance: none;
+    padding: 1.8rem;
   }
   .logos {
     margin-bottom: 5rem;
